--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	<style>
 		body{
 			margin: 0;
+			padding: 0;
 		}
 		img{
 			width: 100%;
+			display: block;
 		}
 	</style>
 </head>
 <body>
 	<img src="img/header.jpg" alt="header">
+	<img src="img/hero.jpg" alt="header">
 </body>
 </html>
