--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 	<img src="img/header.jpg" alt="header">
-	<img src="img/hero.jpg" alt="header">
+	<img src="img/hero.jpg" alt="her">
+	<img src="img/acustica.jpg" alt="acustica">
 </body>
 </html>
