agregando guitarra clasica

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
 	<img src="img/header.jpg" alt="header">
-	<img src="img/hero.jpg" alt="her">
+	<img src="img/hero.jpg" alt="hero">
 	<img src="img/acustica.jpg" alt="acustica">
+	<img src="img/clasica.jpg" alt="clasica">
 </body>
 </html>
