--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 	</style>
 </head>
 <body>
-	<img src="img/header.jpg" alt="header">
-	<img src="img/hero.jpg" alt="hero">
-	<img src="img/acustica.jpg" alt="acustica">
-	<img src="img/clasica.jpg" alt="clasica">
+	<img src="img/nueva-version.jpg" alt="nueva-version">
 </body>
 </html>
