--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 		img{
 			width: 100%;
 			display: block;
+			vertical-align: top;
+		}
+		#responsive{
+			display: none;
+		}
+
+		@media screen and (max-width: 768px){
+			img{
+				display: none;
+			}
+			#responsive{
+				display: block;
+			}
 		}
 	</style>
 </head>
 <body>
+	<img src="img/invie-responsive.png" alt="responsive" id="responsive">
 	<img src="img/header.jpg" alt="header">
 	<img src="img/hero.jpg" alt="hero">
 	<img src="img/acustica.jpg" alt="acustica">
